# secpar

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
scripts/: publish.sh
src/: errors.rs  lib.rs  main.rs  opt.rs  ui.rs  util.rs
src/cli/: mod.rs  par.rs  sec.rs
src/specs/: mod.rs
templates/: parameter_store_template.yaml  secrets_template.yaml
