[package]
name = "secpar"
description = "A tool that leverages AWS Rust SDK for Secrets Manager & Parameter Store"
keywords = ["aws", "sdk", "ssm", "secretsmanager"]
categories = ["development-tools", "command-line-interface"]
version = "0.1.1"
edition = "2021"
authors = ["Riyao Lin"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/riyaolin/secpar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.46.0"
aws-sdk-secretsmanager = "0.16.0"
aws-sdk-ssm = "0.16.0"
color-eyre = "0.6.2"
tokio = { version = "1", features = ["full"]}
tokio-stream = "0.1.9"
serde = { version = "1", features = [ "derive" ] }
serde_yaml = "0.8.20"
structopt = "0.3.25"
thiserror = "1.0.30"
tracing = "0.1.35" 
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3.14", features = ["env-filter"]}
