[package]
name = "secpar"
description = "A tool that leverages AWS Rust SDK for Secrets Manager & Parameter Store"
keywords = ["aws", "sdk", "ssm", "secretsmanager"]
categories = ["development-tools", "command-line-interface"]
version = "0.2.1"
edition = "2024"
rust-version = "1.91"
authors = ["Riyao Lin"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/riyaolin/secpar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1"
aws-sdk-ssm = "1"
aws-types = "1"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
time = "0.3.47"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"
dialoguer = "0.12"
comfy-table = "7.2"
uuid = { version = "1.21.0", features = ["v4"] }

[package.metadata.docs.rs]
# Build docs for all public items, with the same features used in normal builds.
all-features = true
# Show the crate-level doc as the landing page.
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
tempfile = "3"
